unpackaged/main/default/objects/User/fields/ContactNumber__c.field-meta.xml
<CustomField>
    <fullName>ContactNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Number</label>
    <type>Phone</type>
</CustomField>