unpackaged/main/default/objects/User/fields/Emirate__c.field-meta.xml
<CustomField>
    <fullName>Emirate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Emirate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>