unpackaged/main/default/objects/User/fields/Employee_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name_Arabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employee Name Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>