unpackaged/main/default/objects/User/fields/ETI_Inspection_Centers__c.field-meta.xml
<CustomField>
    <fullName>ETI_Inspection_Centers__c</fullName>
    <label>Inspection Centers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Inspection_Centers</valueSetName>
    </valueSet>
</CustomField>