unpackaged/main/default/objects/User/fields/ETSALES_Employee_Zone__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Employee_Zone__c</fullName>
    <label>Employee Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zone A</fullName>
            </value>
            <value>
                <fullName>Zone B</fullName>
            </value>
            <value>
                <fullName>Zone C</fullName>
            </value>
            <value>
                <fullName>Head Office</fullName>
            </value>
            <value>
                <fullName>Technical Services</fullName>
            </value>
            <value>
                <fullName>HO</fullName>
            </value>
            <value>
                <fullName>KAM</fullName>
                <isActive>false</isActive>
                <label>KAM</label>
            </value>
            <value>
                <fullName>MRO</fullName>
                <isActive>false</isActive>
                <label>MRO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>