unpackaged/main/default/objects/User/fields/ETSALES_GL_Department__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_GL_Department__c</fullName>
    <label>GL Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ET_Department</valueSetName>
    </valueSet>
</CustomField>