unpackaged/main/default/objects/User/fields/ETST_Emirates_ID__c.field-meta.xml
<CustomField>
    <fullName>ETST_Emirates_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Emirates ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>