unpackaged/main/default/objects/User/fields/ETT_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>ETT_Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Organization</fullName>
            </value>
            <value>
                <fullName>Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>