unpackaged/main/default/objects/User/fields/GL_Department_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Department_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GL Department Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>