unpackaged/main/default/objects/User/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>