unpackaged/main/default/objects/User/fields/Is_Terms_and_conditions_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Is_Terms_and_conditions_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Terms and conditions Accepted</label>
    <type>Checkbox</type>
</CustomField>