unpackaged/main/default/objects/User/fields/ManagerDesignation__c.field-meta.xml
<CustomField>
    <fullName>ManagerDesignation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Manager Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>