unpackaged/main/default/objects/User/fields/ManagerName__c.field-meta.xml
<CustomField>
    <fullName>ManagerName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Manager Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>