unpackaged/main/default/objects/User/fields/Opt_out_Marketing_Emails__c.field-meta.xml
<CustomField>
    <fullName>Opt_out_Marketing_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt out Marketing Emails</label>
    <type>Checkbox</type>
</CustomField>