unpackaged/main/default/objects/User/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>