unpackaged/main/default/objects/User/listViews/ActiveUsers.listView-meta.xml
<ListView>
    <fullName>ActiveUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>License_Name__c</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <label>Active Users</label>
</ListView>