unpackaged/main/default/objects/User/listViews/All_User_List.listView-meta.xml
<ListView>
    <fullName>All_User_List</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.PROFILE.USERTYPE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CREATED_BY_NAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <label>All User List</label>
    <language>en_US</language>
</ListView>