unpackaged/main/default/objects/User/listViews/Internal_Active_Users.listView-meta.xml
<ListView>
    <fullName>Internal_Active_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>equals</operation>
        <value>arunsarathy.r@smaartt.com</value>
    </filters>
    <label>Internal Active Users</label>
    <language>en_US</language>
</ListView>