unpackaged/main/default/objects/User/listViews/Partner_users_List.listView-meta.xml
<ListView>
    <fullName>Partner_users_List</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.PROFILE.USERTYPE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CREATED_BY_NAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.USERTYPE</field>
        <operation>equals</operation>
        <value>P,b</value>
    </filters>
    <label>Partner users List</label>
    <language>en_US</language>
</ListView>