unpackaged/main/default/objects/User/listViews/Salesforce_Platform_Users.listView-meta.xml
<ListView>
    <fullName>Salesforce_Platform_Users</fullName>
    <booleanFilter>(1 OR 2) AND 3</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>License_Name__c</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>License_Name__c</field>
        <operation>equals</operation>
        <value>Salesforce</value>
    </filters>
    <filters>
        <field>License_Name__c</field>
        <operation>equals</operation>
        <value>Salesforce Platform</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Salesforce / Platform Users</label>
    <language>en_US</language>
</ListView>